# residc

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  residc.cpp  residc.h
